рефактор + коннект к интерфейсу